--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -5,5 +5,5 @@
 # could be python, php, ruby, etc.
 cd $OPENSHIFT_REPO_DIR/wsgi
 rm -f static/index.html
-$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py
-mv index.html static/index.html
+$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py >static/index.html
+exit $?
