Disable caching for html and enable for fonts/images

--- a/wsgi/.htaccess
+++ b/wsgi/.htaccess
@@ -1,3 +1,18 @@
 RewriteEngine On
 RewriteRule ^application/(.+)$ /static/$1 [L]
 RewriteRule ^application/$ /index.html
+
+<filesMatch "\.(html|htm)$">
+FileETag None
+ExpiresDefault A0
+<ifModule mod_headers.c>
+Header unset ETag
+Header set Cache-Control "max-age=0, no-cache, no-store, must-revalidate"
+Header set Pragma "no-cache"
+Header set Expires "Wed, 11 Jan 1984 05:00:00 GMT"
+</ifModule>
+</filesMatch>
+
+<filesMatch "\.(eot|svg|ttf|woff|png)$">
+Header set Cache-Control "max-age=2592000"
+</filesMatch>
