--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -5,5 +5,7 @@
 # could be python, php, ruby, etc.
 cd $OPENSHIFT_REPO_DIR/wsgi
 rm -f static/index.html
-$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py >static/index.html
+rm -f static/changes.rss
+$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py html >static/index.html
+$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py rss >static/changes.rss
 exit $?
