--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -3,6 +3,24 @@
 # available.  Otherwise it will execute while your application is stopped
 # before the deploy step.  This script gets executed directly, so it
 # could be python, php, ruby, etc.
+# 
+# Fedora-status, a set of scripts generating a service status overview.
+# Copyright (C) 2012  Red Hat, Inc., Patrick Uiterwijk
+# 
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+# 
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+# 
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+#  Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, MA  02110-1301, USA.
+
 cd $OPENSHIFT_REPO_DIR/wsgi
 rm -f static/index.html
 rm -f static/changes.rss
