--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -26,6 +26,7 @@ rm -f static/index.html
 rm -f static/changes.rss
 $OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py html >static/index.html
 $OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py rss >static/changes.rss
+$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py mobile >static/m
 cp statuses.json static/statuses.json
 cp changes.json static/changes.json
 exit $?
