--- a/wsgi/.htaccess
+++ b/wsgi/.htaccess
@@ -1,5 +1,6 @@
 RewriteEngine On
 RewriteRule ^application/(.+)$ /static/$1 [L]
+RewriteRule ^application/m$ /m.html [L]
 RewriteRule ^application/$ /index.html
 
 <filesMatch "\.(html|htm|rss)$">
