--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -24,9 +24,9 @@
 cd $OPENSHIFT_REPO_DIR/wsgi
 rm -f static/index.html
 rm -f static/changes.rss
-$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py html >static/index.html
-$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py rss >static/changes.rss
-$OPENSHIFT_RUN_DIR/../virtenv/bin/python generate.py mobile >static/m.html
+$OPENSHIFT_REPO_DIR/../virtenv/bin/python generate.py html >static/index.html
+$OPENSHIFT_REPO_DIR/../virtenv/bin/python generate.py rss >static/changes.rss
+$OPENSHIFT_REPO_DIR/../virtenv/bin/python generate.py mobile >static/m.html
 cp statuses.json static/statuses.json
 cp changes.json static/changes.json
 exit $?
