--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -39,4 +39,6 @@ $OPENSHIFT_REPO_DIR/../virtenv/bin/python generate.py rss >static/changes.rss
 $OPENSHIFT_REPO_DIR/../virtenv/bin/python generate.py mobile >static/m.html
 cp statuses.json static/statuses.json
 cp changes.json static/changes.json
+cp statuses.js static/statuses.js
+cp changes.js static/changes.js
 exit $?
