--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,4 +29,4 @@ jobs:
         run: aws configure set preview.cloudfront true
 
       - name: Build and Push
-        run: make upload
+        run: make githubdeploy
