--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,7 +19,9 @@ jobs:
           ref: main
       
       - name: Install deps
-        run: pip install pelican packaging Markdown --break-system-packages
+        env:
+          PIP_BREAK_SYSTEM_PACKAGES: 1
+        run: pip install pelican packaging Markdown
 
       - name: Configure AWS Credentials
         uses: aws-actions/configure-aws-credentials@v1
